[package]
name = "example"
version = "0.1.0"
authors = ["liuchen <liuchen@davdian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json", "cookies"] }
serde = "1.0.114"
serde_json = "1.0"
serde_derive = "1.0.114"
tokio = { version = "0.2", features = ["full"] }